--- a/colors-and-type.html
+++ b/colors-and-type.html
@@ -1,140 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
-    <meta name="description" content="Toxin description"/>
-    <meta name="keywords" content="Toxin keywords"/>
-    <meta name="msapplication-TileColor" content="#da532c"/>
-    <meta name="theme-color" content="#ffffff"/>
-    <link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon.png"/>
-    <link rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-32x32.png"/>
-    <link rel="icon" type="image/png" sizes="16x16" href="favicons/favicon-16x16.png"/>
-    <link rel="manifest" href="favicons/site.webmanifest"/>
-    <link rel="mask-icon" href="favicons/safari-pinned-tab.svg" color="#5bbad5"/>
-    <title>Toxin - типографика!</title>
-  </head>
-  <body class="colors-and-type">
-    <div class="logo logo_big">
-      <div class="logo__big-pict"></div>
-    </div>
-    <div class="container">
-      <div class="colors-and-type__wrap">
-        <ul class="colors-and-type__pallete">
-          <li class="colors-and-type__pallete-li">
-            <section class="color-pallete">
-              <div class="color-pallete__wrap">
-                <div class="color-pallete__view" style="background-color: #1F2041"></div>
-                <div class="color-pallete__content">
-                  <h2 class="color-pallete__title">Dark Shade 100%</h2>
-                  <p class="color-pallete__descr">#1F2041</p>
-                </div>
-              </div>
-            </section>
-          </li>
-          <li class="colors-and-type__pallete-li">
-            <section class="color-pallete">
-              <div class="color-pallete__wrap">
-                <div class="color-pallete__view" style="background-color: #1F2041; opacity: 0.75"></div>
-                <div class="color-pallete__content">
-                  <h2 class="color-pallete__title">Dark Shade 75%</h2>
-                  <p class="color-pallete__descr">#1F2041</p>
-                </div>
-              </div>
-            </section>
-          </li>
-          <li class="colors-and-type__pallete-li">
-            <section class="color-pallete">
-              <div class="color-pallete__wrap">
-                <div class="color-pallete__view" style="background-color: #1F2041; opacity: 0.5"></div>
-                <div class="color-pallete__content">
-                  <h2 class="color-pallete__title">Dark Shade 50%</h2>
-                  <p class="color-pallete__descr">#1F2041</p>
-                </div>
-              </div>
-            </section>
-          </li>
-          <li class="colors-and-type__pallete-li">
-            <section class="color-pallete">
-              <div class="color-pallete__wrap">
-                <div class="color-pallete__view" style="background-color: #1F2041; opacity: 0.25"></div>
-                <div class="color-pallete__content">
-                  <h2 class="color-pallete__title">Dark Shade 25%</h2>
-                  <p class="color-pallete__descr">#1F2041</p>
-                </div>
-              </div>
-            </section>
-          </li>
-          <li class="colors-and-type__pallete-li">
-            <section class="color-pallete">
-              <div class="color-pallete__wrap">
-                <div class="color-pallete__view" style="background-color: #1F2041; opacity: 0.05"></div>
-                <div class="color-pallete__content">
-                  <h2 class="color-pallete__title">Dark Shade 5%</h2>
-                  <p class="color-pallete__descr">#1F2041</p>
-                </div>
-              </div>
-            </section>
-          </li>
-          <li class="colors-and-type__pallete-li"> 
-            <section class="color-pallete">
-              <div class="color-pallete__wrap">
-                <div class="color-pallete__view" style="background-color: #BC9CFF"></div>
-                <div class="color-pallete__content">
-                  <h2 class="color-pallete__title">Purple</h2>
-                  <p class="color-pallete__descr">#BC9CFF</p>
-                </div>
-              </div>
-            </section>
-          </li>
-          <li class="colors-and-type__pallete-li"> 
-            <section class="color-pallete">
-              <div class="color-pallete__wrap">
-                <div class="color-pallete__view" style="background-color: #6FCF97"></div>
-                <div class="color-pallete__content">
-                  <h2 class="color-pallete__title">Green</h2>
-                  <p class="color-pallete__descr">#6FCF97</p>
-                </div>
-              </div>
-            </section>
-          </li>
-        </ul>
-        <ul class="colors-and-type__typograph">
-          <li class="colors-and-type__typograph-li">
-            <section class="typograph">
-              <div class="typograph__wrap">
-                <p class="typograph__label">H1</p>
-                <h2 class="typograph__title">This one is the sub-section or widget title</h2>
-              </div>
-            </section>
-          </li>
-          <li class="colors-and-type__typograph-li">
-            <section class="typograph">
-              <div class="typograph__wrap">
-                <p class="typograph__label  typograph__label_h2">H2</p>
-                <h2 class="typograph__title  typograph__title_h2">Next one is the item title inside widgets</h2>
-              </div>
-            </section>
-          </li>
-          <li class="colors-and-type__typograph-li">
-            <section class="typograph">
-              <div class="typograph__wrap">
-                <p class="typograph__label  typograph__label_h3">H3</p>
-                <h2 class="typograph__title  typograph__title_h3">This is a label or CTA text</h2>
-              </div>
-            </section>
-          </li>
-          <li class="colors-and-type__typograph-li">
-            <section class="typograph">
-              <div class="typograph__wrap">
-                <p class="typograph__label  typograph__label_text">Body</p>
-                <p class="typograph__text">This is the body text which is used for most of the design, like paragraphs, lists, etc.</p>
-              </div>
-            </section>
-          </li>
-        </ul>
-      </div>
-    </div>
-  <script type="text/javascript" src="scripts/colors-and-type.bundle.js"></script></body>
-</html>
+<!DOCTYPE html><html lang="ru"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><meta http-equiv="X-UA-Compatible" content="ie=edge"><meta name="description" content="Toxin description"><meta name="keywords" content="Toxin keywords"><meta name="msapplication-TileColor" content="#da532c"><meta name="theme-color" content="#ffffff"><link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon.png"><link rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-32x32.png"><link rel="icon" type="image/png" sizes="16x16" href="favicons/favicon-16x16.png"><link rel="manifest" href="favicons/site.webmanifest"><link rel="mask-icon" href="favicons/safari-pinned-tab.svg" color="#5bbad5"><title>Toxin - типографика!</title></head><body class="colors-and-type"><div class="ui-kit-logo"><div class="ui-kit-logo__pict"></div></div><div class="container"><div class="colors-and-type__wrap"><ul class="colors-and-type__pallete"><li class="colors-and-type__pallete-item"><section class="color-pallete"><div class="color-pallete__wrap"><div class="color-pallete__view color-pallete__view_dark-shade-100"></div><div class="color-pallete__content"><h2 class="color-pallete__title">Dark Shade 100%</h2><p class="color-pallete__descr">#1F2041</p></div></div></section></li><li class="colors-and-type__pallete-item"><section class="color-pallete"><div class="color-pallete__wrap"><div class="color-pallete__view color-pallete__view_dark-shade-75"></div><div class="color-pallete__content"><h2 class="color-pallete__title">Dark Shade 75%</h2><p class="color-pallete__descr">#1F2041</p></div></div></section></li><li class="colors-and-type__pallete-item"><section class="color-pallete"><div class="color-pallete__wrap"><div class="color-pallete__view color-pallete__view_dark-shade-50"></div><div class="color-pallete__content"><h2 class="color-pallete__title">Dark Shade 50%</h2><p class="color-pallete__descr">#1F2041</p></div></div></section></li><li class="colors-and-type__pallete-item"><section class="color-pallete"><div class="color-pallete__wrap"><div class="color-pallete__view color-pallete__view_dark-shade-25"></div><div class="color-pallete__content"><h2 class="color-pallete__title">Dark Shade 25%</h2><p class="color-pallete__descr">#1F2041</p></div></div></section></li><li class="colors-and-type__pallete-item"><section class="color-pallete"><div class="color-pallete__wrap"><div class="color-pallete__view color-pallete__view_dark-shade-5"></div><div class="color-pallete__content"><h2 class="color-pallete__title">Dark Shade 5%</h2><p class="color-pallete__descr">#1F2041</p></div></div></section></li><li class="colors-and-type__pallete-item"><section class="color-pallete"><div class="color-pallete__wrap"><div class="color-pallete__view color-pallete__view_purple"></div><div class="color-pallete__content"><h2 class="color-pallete__title">Purple</h2><p class="color-pallete__descr">#BC9CFF</p></div></div></section></li><li class="colors-and-type__pallete-item"><section class="color-pallete"><div class="color-pallete__wrap"><div class="color-pallete__view color-pallete__view_green"></div><div class="color-pallete__content"><h2 class="color-pallete__title">Green</h2><p class="color-pallete__descr">#6FCF97</p></div></div></section></li></ul><div class="colors-and-type__typography"><div class="colors-and-type__typography-item"><div class="colors-and-type__typography-label-wrap"><p class="colors-and-type__typography-label colors-and-type__typography-label_upper colors-and-type__typography-label_size_large">h1</p></div><div class="colors-and-type__typography-wrap"><h1 class="typography typography_variant_h1">This one is the sub-section or widget title</h1></div></div><div class="colors-and-type__typography-item"><div class="colors-and-type__typography-label-wrap"><p class="colors-and-type__typography-label colors-and-type__typography-label_upper colors-and-type__typography-label_size_medium">h2</p></div><div class="colors-and-type__typography-wrap"><h2 class="typography typography_variant_h2">Next one is the item title inside widgets</h2></div></div><div class="colors-and-type__typography-item"><div class="colors-and-type__typography-label-wrap"><p class="colors-and-type__typography-label colors-and-type__typography-label_upper colors-and-type__typography-label_size_low">h3</p></div><div class="colors-and-type__typography-wrap"><h3 class="typography typography_variant_h3 typography_upper">This is a label or cta text</h3></div></div><div class="colors-and-type__typography-item"><div class="colors-and-type__typography-label-wrap"><p class="colors-and-type__typography-label">Body</p></div><div class="colors-and-type__typography-wrap"><p class="typography typography_variant_body">This is the body text which is used for most of the design, like paragraphs, lists, etc.</p></div></div></div></div></div><script type="text/javascript" src="./js/colors-and-type.min.js"></script></body></html>
